2003-11-04  Boris Goldowsky  <boris@alum.mit.edu>

	* Makefile.am: don't die if index.sgml is missing.

2003-10-28  Geert Stappers <stappers@stappers.nl>

	* Makefile.am:
	- Removed calling the upstream mkgtkdoc scripts.
	- DOC_OVERRIDES only defined once.
	- original 'dist-hook directories'

2003-10-26  Robert Varga <frozenfingers@home.ro>

	* conglomerate-docs.sgml:
	
	Syncronized with source - added missing includes

2003-10-25  Geert Stappers <stappers@stappers.nl>

	* Makefile.am:
	Renaming upstreamscripts

2003-10-23  Robert Varga <frozenfingers@xs4all.nl>

	* Makefile.am:
	
	Removed included shell scripts; replaced by actual scripts in uss.

2003-10-19  Robert Varga <frozenfingers@xs4all.nl>

	* Makefile.am
	
	Object declarations and signals in documentation
	
	* conglomerate-docs.sgml
	
	Object tree in documentation
	
	* README
	
	Added information about changing conglomerate-docs.sgml
	
2003-10-15  Robert Varga <frozenfingers@xs4all.nl>

	* Makefile.am
	Maintenance free GTKDOC_LIBS that works with make distcheck

2003-10-11  Robert Varga <frozenfingers@xs4all.nl>

	* Makefile.am
	Maintiance free definition of GTKDOC_LIBS

2003-10-08  David Malcolm <david@davemalcolm.demon.co.uk>

	* Makefile.am

	Make object paths in GTKDOC_LIBS relative to current build location in another attempt to try to get make distcheck to work

	* Makefile.am

	Explicitly list all object files in GTKDOC_LIBS (was failing a make distcheck)

2003-10-07  David Malcolm <david@davemalcolm.demon.co.uk>

	* conglomerate-docs.sgml

	Added a hand-written version containing overviews of how the major parts of the program work

2003-10-06  David Malcolm <david@davemalcolm.demon.co.uk>

	* Makefile.am

	Added $(GTKSOURCEVIEW_LIBS) and $(PRINTING_LIBS) to GTKDOC_LIBS

2003-10-06  Robert Varga

	* Makefile.am
	Generate conglomerate-docs.sgml,
	cleaner definition of source files
	and a hack that generates conglomerate.types

	* conglomerate.types.bkp is dropped
